# voteClassifier

./: .gitignore  README.md  pyproject.toml
settings/: global.yaml
voteclassification/: interim_data_processing.py  load_data..py  raw_data_processing.py
voteclassification/app/: app.py
voteclassification/app/pages/: info.py
voteclassification/data/: interim_data_processing.py  raw_data_processing.py
voteclassification/model/: train_model.py
