[tool.poetry]
name = "voteclassification"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.0"
pandas = "^2.1.1"
streamlit = "^1.27.0"
plotly = "^5.17.0"
seaborn = "^0.12.2"
scikit-learn = "^1.3.1"
loguru = "^0.7.2"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
